casos de uso Farmacia
Añdi las vistas y algunas funcionalidades de la parte de Farmacias.

--- a/src/main/webapp/resources/css/dagss.css
+++ b/src/main/webapp/resources/css/dagss.css
@@ -104,3 +104,7 @@ a:link:hover, a:visited:hover  {
 	border-style: solid;
 	border-color: black;
 }
+
+#buscarPacienteForm, #datosPacienteForm{
+    float: left;
+}
